@@ -5,6 +5,9 @@ Changes with APR-util 1.4.0
 
 Changes with APR-util 1.3.0
 
+  *) Add support for OpenLDAP's ability to support a directory of 
+     certificate authorities. [Eric Covener]
+
   *) Ensure that the LDAP code can compile cleanly on platforms that do
      not define the LDAP_OPT_REFHOPLIMIT symbol, most specifically Windows.
      [Victor <victorjss@gmail.com>, Graham Leggett]
